[gd_scene load_steps=3 format=3 uid="uid://cclxcqbc14gh1"]

[ext_resource type="Script" path="res://Scripts/options_menu.gd" id="1_koo3d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qpr26"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="OptionsPauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_koo3d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -260.0
offset_right = 384.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="SoundVolume2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_qpr26")
text = "Sound Volume"

[node name="MusicVolume2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_qpr26")
text = "Music Volume"

[node name="Back2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_qpr26")
text = "Back"

[connection signal="pressed" from="VBoxContainer/SoundVolume2" to="." method="_on_sound_volume_pressed"]
[connection signal="pressed" from="VBoxContainer/SoundVolume2" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/SoundVolume2" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/SoundVolume2" to="." method="_on_sound_volume_2_pressed"]
[connection signal="pressed" from="VBoxContainer/MusicVolume2" to="." method="_on_music_volume_2_pressed"]
[connection signal="pressed" from="VBoxContainer/MusicVolume2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/MusicVolume2" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/MusicVolume2" to="." method="_on_music_volume_pressed"]
[connection signal="pressed" from="VBoxContainer/Back2" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/Back2" to="." method="_on_back_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Back2" to="." method="_on_back_pressed"]
